--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>WOAH</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+  <img src="bg" alt="blep">
+  <%= image_tag("logo", size: "16") %>
+  <h1>INCREDIBLE PIECE OF TITLE DUDE</h1>
+  <script src="js/scripts.js"></script>
+</body>
+</html>
