--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,6 +14,8 @@
   <img src="bg" alt="blep">
   <%= image_tag("logo", size: "16") %>
   <h1>INCREDIBLE PIECE OF TITLE DUDE</h1>
+
+  <%= image_tag "logo", alt: "alttext" %>
   <script src="js/scripts.js"></script>
 </body>
 </html>
