--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,41 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>WOAH</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <title>PLGRND</title>
+  <meta name="description" content="PLGRND">
+  <meta name="author" content="PLGRND">
 </head>
 
 <body>
-  <img src="bg" alt="blep">
-  <%= image_tag("logo", size: "16") %>
-  <h1>INCREDIBLE PIECE OF TITLE DUDE</h1>
+  <div class="filter">
+  <div class="container">
+      <div class="row justify-content-center">
+        <h1 class="home-title text-center">P L G R N D</h1>
+      </div>
 
-  <%= image_tag "logo", alt: "alttext" %>
-  <script src="js/scripts.js"></script>
+      <div class="row justify-content-center">
+        <h2 class="text-center subtitle" > WHERE SPORTS REALLY START</h2>
+        <h3 class="text-center description">
+          PLGRND enables you to book any available sport infrastructure around you.
+          For training session of friendly game, book a playground!
+        </h3>
+      </div>
+
+      <div class="row justify-content-center">
+          <button type="button" class="btn btn-warning rounded btn-lg">START</button>
+      </div>
+
+        <div class="row justify-content-center">
+          <a href="joke">
+
+            <%= image_tag "badge-app-store", alt: "alttext", width:"120px" %>
+            <%= image_tag "google-play-badge", alt: "alttext", width:"120px"  %>
+            </a>
+        </div>
+
+       </div>
+  </div>
+  </div>
+   <script src="js/scripts.js"></script>
 </body>
 </html>
