trying to create the infrastructures architecture

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   <meta name="author" content="PLGRND">
 </head>
 
-<body>
+<body class="home">
   <div class="filter">
   <div class="container">
       <div class="row justify-content-center">
@@ -22,7 +22,7 @@
       </div>
 
       <div class="row justify-content-center">
-          <button type="button" class="btn btn-warning rounded btn-lg">START</button>
+          <button type="button" class="btn btn-warning rounded btn-lg" onclick="window.location.href = 'index';">START</button>
       </div>
 
         <div class="row justify-content-center">
