--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,18 +1,16 @@
 // Specific CSS for your home-page
 
+.home {
 
-.navbar {
-  display:none;
-}
-
-body {
   background: url('bg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-}
 
+.navbar {
+  display:none;
+}
 
 .row {
   padding: 0;
@@ -50,4 +48,6 @@ button {
 width: 100%;
 height: 100%;
 background: rgba(73, 98, 150, 0.5);
+}
+
 }
