--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
       </div>
 
       <div class="row justify-content-center">
-        <h2 class="text-center subtitle" > Naah, we're just kidding!</h2>
+        <h2 class="text-center subtitle" > INDEXEXEXEXEX</h2>
         <h3 class="text-center description">
           Just click on start and don't piss us off!
         </h3>
