--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -1,14 +1,10 @@
 <% @infrastructures.each do |infra| %>
-  <%= infra.name %>
-<% end %>
-
-
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title"><%= infra.name %></h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"><%= infra.name %></h5>
+      <p class="card-text"><%= infra.detail %></p>
+      <a href="#" class="btn btn-primary">Book</a>
+    </div>
   </div>
-</div>
 <% end %>
