--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -4,7 +4,7 @@
     <div class="card-body">
       <h5 class="card-title"><%= infra.name %></h5>
       <p class="card-text"><%= infra.detail %></p>
-      <a href="#" class="btn btn-primary">Book</a>
+      <a href="#" class="btn btn-primary">More details</a>
     </div>
   </div>
 <% end %>
