--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
       </div>
 
       <div class="row justify-content-center">
-          <button type="button" class="btn btn-warning rounded btn-lg" onclick="window.location.href = 'index';">START</button>
+        <%= link_to "START", infrastructures_path, class:"btn btn-warning rounded btn-lg"%>
       </div>
 
         <div class="row justify-content-center">
