--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -1,6 +1,6 @@
 <% @infrastructures.each do |infra| %>
   <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://www.google.com/maps/uv?hl=fr&pb=!1s0x47e67ac09948a18d%3A0xdd2450406cef2c5c!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMgbLyPzDTFD1an3CUPWAxueHg6GI1ROInwT3w%3Dw426-h320-k-no!5sparc%20des%20princes%20-%20Recherche%20Google!15sCAQ&imagekey=!1e10!2sAF1QipMgbLyPzDTFD1an3CUPWAxueHg6GI1ROInwT3w&sa=X&ved=2ahUKEwi9xYTulY3nAhULHxoKHZUzBRoQoiowHXoECA8QBg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title"><%= infra.name %></h5>
       <p class="card-text"><%= infra.detail %></p>
