--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -1,10 +1,10 @@
 <% @infrastructures.each do |infra| %>
   <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="../assets/images/" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title"><%= infra.name %></h5>
       <p class="card-text"><%= infra.detail %></p>
-      <a href="#" class="btn btn-primary">More details</a>
+      <%= link_to "More details", infrastructure_path(infra.id), class:"btn btn-primary"%>
     </div>
   </div>
 <% end %>
