--- a/app/views/infrastructures/show.html.erb
+++ b/app/views/infrastructures/show.html.erb
@@ -1,81 +1,99 @@
 <body class="show">
-  <div class="row">
-    <div class="col-12" class="featured-image-container">
-        <%= image_tag "bg", alt: "alttext", class: "featured-image" %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Camp Nou</h5>
-          <h6 class="card-subtitle mb-2 text-muted">C. d'Arístides Maillol, 12, 08028 Barcelona, España</h6>
-          <p class="card-text">El Camp Nou es un recinto deportivo propiedad del Fútbol Club Barcelona, ubicado en el distrito de Les Corts de la ciudad de Barcelona, España. Inaugurado el 24 de septiembre de 1957 y catalogado por la UEFA en 1998 como «estadio de élite»,3​ es el estadio con mayor capacidad de Europa y el tercero de fútbol del mundo, con un aforo actual de 99 354 espectadores.4​ La capacidad del estadio ha variado desde su aforo inicial de alrededor de noventa mil localidades, a su máximo aforo de ciento veinte mil espectadores, con la construcción con motivo del Mundial de España 1982, de la tercera gradería.5​ Finalmente en 1994, su aforo actual se situó por debajo de los cien mil espectadores, tras la remodelación acometida en aplicación de la normativa que obligaba a eliminar las localidades sin asiento.</p>
-          <a href="#" class="card-link">Site link</a>
-          <a href="#" class="card-link">Another link</a>
-          <div class="cronogram">
-            <table class="cronogram" border="1" cellpadding="1">
-              <tbody>
-              <tr>
-              <td>&nbsp;</td>
-              <td>Opening</td>
-              <td>Closing</td>
-              <td>Break</td>
-              </tr>
-              <tr>
-              <td>Mon</td>
-              <td>08:00am</td>
-              <td>10:00pm</td>
-              <td></td>
-              </tr>
-              <tr>
-              <td>Tues</td>
-              <td>08:00am</td>
-              <td>10:00pm</td>
-              <td>&nbsp;</td>
-              </tr>
-              <tr>
-              <td>Wed</td>
-              <td>08:00am</td>
-              <td>10:00pm</td>
-              <td>&nbsp;</td>
-              </tr>
-              <tr>
-              <td>Thur</td>
-              <td>08:00am</td>
-              <td>10:00pm</td>
-              <td>&nbsp;</td>
-              </tr>
-              <tr>
-              <td>Fri</td>
-              <td>08:00am</td>
-              <td>10:00pm</td>
-              <td>&nbsp;</td>
-              </tr>
-              <tr>
-              <td>Sat</td>
-              <td>08:00am</td>
-              <td>Closed</td>
-              <td>&nbsp;</td>
-              </tr>
-              <tr>
-              <td>Sun</td>
-              <td>Closed</td>
-              <td>Closed</td>
-              <td>&nbsp;</td>
-              </tr>
-              </tbody>
-              </table>
-          </div>
-        </div>
-      </div>
+	<div class="row featured-image-container">
+	</div>
+	<div class="row">
+		<div class="col-8">
+			<div class="card">
+				<div class="card-body">
+					<h2 class="card-title">Camp Nou</h2>
+					<h5 class="card-subtitle mb-2 text-muted">C. d'Arístides Maillol, 12, 08028 Barcelona, España</h5>
+					<p class="card-text">&nbsp;El Camp Nou es un recinto deportivo propiedad del Fútbol Club Barcelona, ubicado en el distrito de Les Corts de la ciudad de Barcelona, España. Inaugurado el 24 de septiembre de 1957 y catalogado por la UEFA en 1998 como «estadio de élite»,3​ es el estadio con mayor capacidad de Europa y el tercero de fútbol del mundo, con un aforo actual de 99 354 espectadores.4​ La capacidad del estadio ha variado desde su aforo inicial de alrededor de noventa mil localidades, a su máximo aforo de ciento veinte mil espectadores, con la construcción con motivo del Mundial de España 1982, de la tercera gradería.5​ Finalmente en 1994, su aforo actual se situó por debajo de los cien mil espectadores, tras la remodelación acometida en aplicación de la normativa que obligaba a eliminar las localidades sin asiento.</p>
 
-    </div>
-    <div class="col-8">
-      .col-8<br>Subsequent columns continue along the new line.
-    </div>
-  </div>
+					<a href="https://www.fcbarcelona.com/" class="card-link btn-lg-active"><h4>Site link</h4></a>
+					<div class="cronogram">
+						<table class="cronogram">
+							<tbody>
+								<tr>
+									<td>&nbsp;</td>
+									<td>Monday</td>
+									<td>Tuesdays</td>
+									<td>Wednesday</td>
+									<td>Thursday</td>
+									<td>Friday</td>
+									<td>Saturday</td>
+									<td>Sunday</td>
+								</tr>
+								<tr>
+									<td>Opening</td>
+									<td>08:00am</td>
+									<td>08:00am</td>
+									<td>08:00am</td>
+									<td>08:00am</td>
+									<td>08:00am</td>
+									<td>08:00am</td>
+									<td>Closed</td>
+								</tr>
+								<tr>
+									<td>Closing</td>
+									<td>08:00pm</td>
+									<td>08:00pm</td>
+									<td>08:00pm</td>
+									<td>08:00pm</td>
+									<td>08:00pm</td>
+									<td>08:00pm</td>
+									<td>Closed</td>
+								</tr>
+								<tr>
+									<td>Break</td>
+									<td>none</td>
+									<td>none</td>
+									<td>none</td>
+									<td>none</td>
+									<td>none</td>
+									<td>none</td>
+									<td>&nbsp;</td>
+								</tr>
 
-   <script src="js/scripts.js"></script>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<div class="col-4">
+				<div class="row">
+				<button type="button" class="btn btn-primary btn-lg btn-block book-now rounded">Book now</button>
+			</div>
+<div class="row">
+	<h4>More photos</h4>
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<%= image_tag "campnou1", alt: "First slide", class:"d-block w-100" %>
+						</div>
+						<div class="carousel-item">
+							<%= image_tag "campnou2", alt: "Second slide", class:"d-block w-100" %>
+						</div>
+						<div class="carousel-item">
+							<%= image_tag "campnou3", alt: "Third slide", class:"d-block w-100" %>
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script src="js/scripts.js"></script>
 </body>
+
+
 
