--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to "../infrastructures", class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
     <% end %>
 
@@ -12,7 +12,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Rent", "#", class: "nav-link" %>
+          <%= link_to "Rent", "../infrastructures", class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Host", "#", class: "nav-link" %>
