--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -5,6 +5,9 @@
   <div class="row">
     <div class="col">
       <% @infrastructures.each do |infra| %>
+
+
+      <div>
         <div class="card" style="width: 18rem;">
           <%= image_tag "stade de la meinau", alt: "alttext", class: "featured-image" %>
             <div class="card-body">
@@ -15,11 +18,12 @@
           </div>
           <% end %>
         </div>
-          <div class="col">
-            <div id="map-container">
-              <div id="map-canvas"></div>
-          </div>
+      </div>
+        <div class="col">
+          <div id="map-container">
+            <div id="map-canvas"></div>
         </div>
       </div>
     </div>
+  </div>
 
