change all local media sources to web hosted files

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -7,7 +7,7 @@ $navbar-color : #496296;
   height: 20em;
   width: 100%;
 
-  background: url(camp-nou) no-repeat;
+  background: url(https://cldup.com/7Bo5Ay9WNt-3000x3000.jpeg) no-repeat;
       background-size: cover;
     background-clip: border-box;
     margin: 0px;
