--- a/app/views/infrastructures/show.html.erb
+++ b/app/views/infrastructures/show.html.erb
@@ -70,13 +70,13 @@
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<%= image_tag "campnou1", alt: "First slide", class:"d-block w-100" %>
+							<%= image_tag "https://cldup.com/WbKpL-Qris-3000x3000.jpeg", alt: "First slide", class:"d-block w-100" %>
 						</div>
 						<div class="carousel-item">
-							<%= image_tag "campnou2", alt: "Second slide", class:"d-block w-100" %>
+							<%= image_tag "https://cldup.com/dnq-bMk8wG-3000x3000.jpeg", alt: "Second slide", class:"d-block w-100" %>
 						</div>
 						<div class="carousel-item">
-							<%= image_tag "campnou3", alt: "Third slide", class:"d-block w-100" %>
+							<%= image_tag "https://cldup.com/ZLTQXQVsKs-3000x3000.jpeg", alt: "Third slide", class:"d-block w-100" %>
 						</div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
