--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 
 .home {
 
-  background: url('bg') no-repeat center center fixed;
+  background: url('https://cldup.com/ZLTQXQVsKs-3000x3000.jpeg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
