--- a/app/assets/stylesheets/pages/joke.scss
+++ b/app/assets/stylesheets/pages/joke.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 .joke {
 
-  background: url('bg') no-repeat center center fixed;
+  background: url('https://cldup.com/ZLTQXQVsKs-3000x3000.jpeg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
