--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -1,5 +1,5 @@
 <div class = "header">
-  <%= image_tag "tour-emirates-stadium", alt: "alttext", class: "img-header" %>
+  <%= image_tag "https://cldup.com/pZ79MsILKh-3000x3000.jpeg", alt: "alttext", class: "img-header" %>
 </div>
 <div class="container">
   <div class="row">
@@ -9,7 +9,7 @@
 
       <div>
         <div class="card" style="width: 18rem;">
-          <%= image_tag "stade de la meinau", alt: "alttext", class: "featured-image" %>
+          <%= image_tag "https://cldup.com/aSepe6mewy-3000x3000.jpeg", alt: "alttext", class: "featured-image" %>
             <div class="card-body">
               <h5 class="card-title"><%= infra.name %></h5>
               <p class="card-text"><%= infra.detail %></p>
