replaced locally hosted images with web hosted images for components

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,8 +19,8 @@
         <div class="row justify-content-center">
           <a href="joke">
 
-            <%= image_tag "badge-app-store", alt: "alttext", width:"120px" %>
-            <%= image_tag "google-play-badge", alt: "alttext", width:"120px"  %>
+            <%= image_tag "https://cldup.com/FmWbqHZpRN-3000x3000.png", alt: "alttext", width:"120px" %>
+            <%= image_tag "https://cldup.com/AVUSUqIcI2-3000x3000.png", alt: "alttext", width:"120px"  %>
             </a>
         </div>
 
