add CSS hierarchical structure to separate per page. Now each page has a unique containter for all the content that is then targeted by the CSS, so the changes only affect that page

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,7 +5,9 @@
 @import "show";
 @import "joke";
 
-#map-container {
+.index {
+
+  #map-container {
    height: 75vh;
    border-radius: 16px 16px;
    border-color: #fff;
@@ -39,4 +41,5 @@ margin-bottom: 50px;
 }
 .alert {
   display:none;
+}
 }
