--- a/app/assets/stylesheets/pages/_joke.scss
+++ b/app/assets/stylesheets/pages/_joke.scss
@@ -1,6 +1,5 @@
 // Specific CSS for your home-page
-
-.home {
+.joke {
   position: absolute;
   top:0;
   left: 0;
@@ -11,6 +10,7 @@
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+
 
   .navbar {
     display:none;
