--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -1,7 +1,7 @@
 <div class = "header">
   <%= image_tag "https://cldup.com/pZ79MsILKh-3000x3000.jpeg", alt: "alttext", class: "img-header" %>
 </div>
-<div class="container">
+<div class="index container">
   <div class="row">
     <div class="col">
       <% @infrastructures.each do |infra| %>
