--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-<div class="filter">
-  <div class="container">
+<div class="home">
+  <div class="filter">
+    <div class="container">
       <div class="row justify-content-center">
         <h1 class="home-title text-center">P L G R N D</h1>
       </div>
@@ -16,14 +17,15 @@
         <%= link_to "START", infrastructures_path, class:"btn btn-warning rounded btn-lg"%>
       </div>
 
-        <div class="row justify-content-center">
-          <a href="joke">
+      <div class="row justify-content-center">
+        <a href="joke">
 
-            <%= image_tag "https://cldup.com/FmWbqHZpRN-3000x3000.png", alt: "alttext", width:"120px" %>
-            <%= image_tag "https://cldup.com/AVUSUqIcI2-3000x3000.png", alt: "alttext", width:"120px"  %>
-            </a>
-        </div>
+          <%= image_tag "https://cldup.com/FmWbqHZpRN-3000x3000.png", alt: "alttext", width:"120px" %>
+          <%= image_tag "https://cldup.com/AVUSUqIcI2-3000x3000.png", alt: "alttext", width:"120px"  %>
+        </a>
+      </div>
 
-       </div>
+    </div>
   </div>
+</div>
 </div>
