--- a/app/views/pages/joke.html.erb
+++ b/app/views/pages/joke.html.erb
@@ -1,5 +1,6 @@
-<div class="filter">
-  <div class="container">
+<div class="joke">
+  <div class="filter">
+    <div class="container">
       <div class="row justify-content-center">
         <h1 class="home-title text-center">P L G R N D</h1>
       </div>
@@ -15,7 +16,8 @@
         <%= link_to "START", infrastructures_path, class:"btn btn-warning rounded btn-lg"%>
       </div>
 
-       </div>
+    </div>
   </div>
 </div>
+
 
