--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="filter">
+<div class="index">
   <div class="container">
       <div class="row justify-content-center">
         <h1 class="home-title text-center">P L G R N D</h1>
