--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,4 +1,6 @@
-.card-infra {
+.card {
+
+  .card-infra {
   display: flex;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
   height: 130px;
@@ -19,4 +21,6 @@
   height: 30%;
   margin: 20px 0px 0px 40px;
   font-size: 12px;
+
+}
 }
