--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -1,29 +1,32 @@
-<div class = "header">
-  <%= image_tag "https://cldup.com/pZ79MsILKh-3000x3000.jpeg", alt: "alttext", class: "img-header" %>
-</div>
-<div class="index container">
-  <div class="row">
-    <div class="col">
-      <% @infrastructures.each do |infra| %>
+<div class="index">
+  <div class = "featured-image-container">
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+                <div class="row">
+        <% @infrastructures.each do |infra| %>
 
-
-      <div>
-        <div class="card" style="width: 18rem;">
+        <div class="col-6">
+        <div class="card" >
           <%= image_tag "https://cldup.com/aSepe6mewy-3000x3000.jpeg", alt: "alttext", class: "featured-image" %>
-            <div class="card-body">
-              <h5 class="card-title"><%= infra.name %></h5>
-              <p class="card-text"><%= infra.detail %></p>
-              <%= link_to "More details", infrastructure_path(infra.id), class:"btn btn-primary"%>
-            </div>
+          <div class="card-body">
+            <h5 class="card-title"><%= infra.name %></h5>
+            <p class="card-text"><%= infra.detail %></p>
+            <%= link_to "More details", infrastructure_path(infra.id), class:"btn btn-primary"%>
           </div>
-          <% end %>
+        </div>
+        </div>
+        <% end %>
         </div>
       </div>
-        <div class="col">
-          <div id="map-container">
-            <div id="map-canvas"></div>
+      <div class="col-6">
+        <div id="map-container">
+          <div id="map-canvas"></div>
         </div>
       </div>
     </div>
   </div>
+</div>
+
 
