--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -25,6 +25,9 @@
     max-width: 100%;
   }
   #map-container {
+    background: url(https://cldup.com/SoV6HuqZCv-3000x3000.png)no-repeat;
+  background-size: cover;
+  background-clip: border-box;
    height: 75vh;
    border-radius: 16px 16px;
    border-color: #fff;
