modified token for map

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -28,7 +28,7 @@
             style="width: 100%;
             height: 600px;"
             data-markers="<%= @markers.to_json %>"
-            data-mapbox-api-key="<%= ENV['pk.eyJ1Ijoia2V2aW5yaWV0c2NoIiwiYSI6ImNrMzkwZmxnbzBlMXMzaG95cnV3N2x2cjAifQ.N_n7acS6OhD6mdAN-igqeA'] %>"
+            data-mapbox-api-key="<%= ENV['pk.eyJ1IjoibnVueXZlZ2EiLCJhIjoiY2s1c21xY2lqMG5pYzNsbXVpOXJ4b3BvcCJ9.MvlMWEtPeBxTdNbml7JZ2g'] %>"
             ></div>
           </div>
         </div>
