make the map  container size responsive so it adapts both to the map and window size

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -26,14 +26,13 @@
   }
   #map-container {
 
-   height: 75vh;
+   height: auto;
    border-radius: 16px 16px;
    border-color: #fff;
    border-style: solid;
    box-shadow: 2px 2px 10px #B1B1B1;
    border-width: 7px;
    vertical-align: top;
-   height: 70vh;
  }
 
 .card {
