--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -39,11 +39,7 @@
   border-radius: 16px;
 
 }
-.featured-image {
-  width: 100%;
-  padding: 12px 12px 0px 12px;
-  border-radius: 20px;
-}
+
 
 .header{
 height: 300px;
@@ -60,6 +56,18 @@ margin-bottom: 50px;
 }
 .alert {
   display:none;
+}
+.img-wrapper {
+    width: 100%;
+  max-height: 175px;
+    overflow: hidden;
+
+}
+.featured-image {
+  width: 100%;
+
+  padding: 12px 12px 0px 12px;
+  border-radius: 20px;
 }
 
 }
