modified the index page to display images related to the structure and do it in a responsive way.  Modified the navbar to take less height. Modified the seeds file to include images. Modified the show page to be more responsive and look less bad

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -21,8 +21,9 @@ $navbar-color : #496296;
 
   .cronogram{
     font-size: 15px;
-    background: lightgray;
+    background: $navbar-color;
     font-family: 'Montserrat', sans-serif;
+    color: white;
   }
 
   .book-now {
@@ -42,7 +43,20 @@ $navbar-color : #496296;
   }
 
   td {
-    padding: 1vh;
+    padding: 0.7vh;
 }
+
+  .book-now {
+    margin:10% auto;
+  }
+  .card {
+    border-radius: 15px;
+    padding: 10px;
+    margin:10px;
+  }
+
+  .carousel-inner {
+        border-radius: 15px;
+  }
 }
 
