--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -11,9 +11,9 @@
 .index {
 
   .featured-image-container  {
-  height: 20em;
+  height: 25em;
   width: 100%;
-  background: url(https://cldup.com/pZ79MsILKh-3000x3000.jpeg) no-repeat;
+  background: url(https://cldup.com/HdYNVTQ4q0-3000x3000.jpeg) no-repeat;
   background-size: cover;
   background-clip: border-box;
   margin: 0px;
@@ -37,7 +37,8 @@
 
 .card {
   border-radius: 16px;
-
+  max-height:95%;
+  text-align: center;
 }
 
 
