cronogram link added

--- a/app/views/infrastructures/show.html.erb
+++ b/app/views/infrastructures/show.html.erb
@@ -14,7 +14,7 @@
       Le Camp Nou est construit en 1957 à Barcelone.</p>
 
       <a href="https://www.fcbarcelona.com/" class="card-link btn-lg-active"><h4>Site link</h4></a>
-      <a href="https://www.fcbarcelona.com/" class="card-link btn-lg-active"><h4>Cronogram</h4></a>
+      <a href="https://www.fcbarcelona.com/en/club-schedule" class="card-link btn-lg-active"><h4>Cronogram</h4></a>
 
     </div>
   </div>
