--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -3,7 +3,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-6">
+      <div class="col-12 col-md-6">
         <div class="row">
           <% @infrastructures.each do |infra| %>
 
@@ -22,7 +22,7 @@
           <% end %>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 col-md-6">
         <div id="map-container">
 
 <div
