--- a/app/views/infrastructures/show.html.erb
+++ b/app/views/infrastructures/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row featured-image-container">
   </div>
   <div class="row">
-    <div class="col-6">
+    <div class="col-12 col-md-6">
      <div class="card">
       <div class="card-body">
        <h2 class="card-title">Camp Nou</h2>
@@ -20,7 +20,7 @@
   </div>
 
 </div>
-<div class="col-6">
+<div class="col-12 col-md-6">
   <div class="row">
     <div class="card">
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel"style= "text-align:center">
