searchbar is up and running

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -71,4 +71,12 @@ margin-bottom: 50px;
   border-radius: 20px;
 }
 
+.navbar {
+  background-color:#496296 !important;
+  height: 60px;
+}
+form {
+  width:100%;
+}
+
 }
