--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,42 @@
-<div class ="footer">
-  <div class= "information">
-    <p>contact</p>
+<div class="footer">
+  <div class="row">
+  <div class="col">
+    <h4>Company</h4>
+      <li><a data-testid="about-button-footer" href="#">Information</a></li>
+      <li><a data-testid="media-button-footer" href="#">Press</a></li>
+      <li><a data-testid="careers-button-footer" href="#">Jobs</a></li>
+    </div>
+  <div class="col">
+    <h4>Concept</h4>
+      <li><a data-testid="instructions-button-footer" href="#">How to add a playground ?</a></li>
+      <li><a data-testid="policies-button-footer" href="#">How to rent ?</a></li>
+      <li><a data-testid="rent-my-playground-button-footer" href="#">Rent my playground</a></li>
   </div>
+    <div class="col">
+      <h4>My Account</h4>
+        <li><a data-testid="signup-button-footer" href="#">Sign up</a></li>
+        <li><a data-testid="login-button-footer" href="#">Sign in</a></li>
+        <li><a data-testid="forgot-password-button-footer" href="#">Password</a></li>
+        <li><a data-testid="deposit-button-footer" href="#">Profile</a></li>
+     </div>
+     <div class="col">
+        <h4>Help</h4>
+        <li><a data-testid="faq-button-footer" href="#" target="_blank">FAQ</a></li>
+        <li><a data-testid="contact-us-button-footer" href="#">Contact us</a></li>
+     </div>
+     <div class="col">
+      <h4>Security</h4>
+        <li><a data-testid="insurance-button-footer" href="#">Insurance</a></li>
+        <li><a data-testid="privacy-button-footer" href="#" target="_blank">Confidentiality</a></li>
+        <li><a data-testid="cgu-button-footer" href="#" target="_blank">Legal Notice</a>/<a data-testid="cpu-button-footer" href="https://support.ouicar.fr/hc/fr/articles/360004863518" target="_blank">CPU</a></li>
+        <li><a data-testid="cookies-chart-button-footer" href="#" target="_blank">Cookies policy</a></li>
+        <li><a data-testid="legal-button-footer" href="#" target="_blank">Privacy policy</a></li>
+     </div>
+  <div class="col">
+    <div class="copyright">
+    <img src="https://cldup.com/EiclcWtQCf-3000x3000.png">
+    <p>© 2020 PLGRND, Inc. All rights reserved</p>
+  </div>
+  </div>
+</div>
 </div>
