--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
     <p class="alert"><%= alert %></p>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
+
     <%= javascript_pack_tag 'application' %>
-    <%= render 'shared/footer' %>
+    <footer><%= render 'shared/footer' %></footer>
   </body>
 </html>
