--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -47,7 +47,7 @@ $navbar-color : #496296;
 }
 
   .book-now {
-    margin:10% auto;
+    margin:25px auto;
   }
   .card {
     border-radius: 15px;
