removed the footer from the app and added it to the pages where it's needed

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,11 @@
 // Specific CSS for your home-page
 
 .home {
+
+  .footer {
+    display:none !important;
+  }
+
   position: absolute;
   top:0;
   left: 0;
