--- a/app/views/users/bookings.html.erb
+++ b/app/views/users/bookings.html.erb
@@ -1,11 +1,11 @@
-<h1>You have 1 new booking :</h1>
+<h1>Congrats, you have one new booking :</h1>
 
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="https://www.fcbarcelonanoticias.com/uploads/s1/11/69/48/3/camp-nou-nuevo-constructoras.jpeg" alt="Card image cap">
   <div class="card-body">
     <h2 class="card-title">Camp Nou</h2>
     <h4 class="card-text">Starting date :</h4>
-    <p class="card-text">02/01/2020</p>
+    <p class="card-text">01/02/2020</p>
     <h4 class="card-text">Duration :</h4>
     <p class="card-text">3 days</p>
     <a href="#" class="btn btn-danger">Cancel</a>
