--- a/app/views/infrastructures/show.html.erb
+++ b/app/views/infrastructures/show.html.erb
@@ -66,7 +66,7 @@
         <form>
   <div class="form-group">
     <label for="exampleFormControlInput1">Start date</label>
-    <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="mm/dd/yyyy">
+    <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="dd/mm/yyyy">
   </div>
   <div class="form-group">
     <label for="exampleFormControlSelect1">Duration</label>
@@ -82,7 +82,9 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Let's book the Camp Nou !</button>
+        <%= link_to "Let's book the Camp Nou", users_bookings_path, class:"btn btn-primary"%>
+
+        <!-- <button type="button" class="btn btn-primary">Let's book the Camp Nou !</button> -->
       </div>
     </div>
   </div>
