--- a/app/views/users/bookings.html.erb
+++ b/app/views/users/bookings.html.erb
@@ -1,7 +1,7 @@
 <div class="bookings">
-  <h1>You have 1 new reservation:</h1>
+  <h1>Upcoming reservations:</h1>
   <div class="row">
-    <div class="card col-6">
+    <div class="card col-5">
      <div class="row">
       <div class="col-6">
         <img class="card-img-top" src="https://www.fcbarcelonanoticias.com/uploads/s1/11/69/48/3/camp-nou-nuevo-constructoras.jpeg" alt="Card image cap">
