added mybookings page, added CSS to many pages, modified the footer for certain pages

--- a/app/views/infrastructures/show.html.erb
+++ b/app/views/infrastructures/show.html.erb
@@ -8,11 +8,13 @@
       <div class="card-body">
        <h2 class="card-title">Camp Nou</h2>
        <h5 class="card-subtitle mb-2 text-muted">C. d'Arístides Maillol, 12, 08028 Barcelona, España</h5>
-       <p class="card-text">&nbsp;Le Camp Nou est un stade de football, situé à Barcelone dans le district des Corts, en Espagne.
-        Le FC Barcelone en est le club résident depuis son inauguration. Avec une capacité de 99 354 places, le Camp Nou est le plus grand stade d'Europe et le douzième plus grand stade du monde.
-        Cet édifice est classé Stade UEFA catégorie 4, ce qui lui permet de recevoir de nombreux matchs internationaux et notamment
-        plusieurs finales de Ligue des champions, la dernière étant la finale de l'édition 1999.
-      Le Camp Nou est construit en 1957 à Barcelone.</p>
+       <p class="card-text">&nbsp;Camp Nou, meaning new field, often referred to in English as the Nou Camp)
+        has been the home stadium of FC Barcelona since its completion in 1957, and it´slocated in Carrer d'Arístides Maillol.
+  With a seating capacity of 99,354, it is the largest stadium in Spain and Europe, and the third largest football stadium
+in the world in capacity. It has hosted two European Cup/Champions League finals in 1989 and 1999, two UEFA Cup Winners' Cup finals,
+four Inter-Cities Fairs Cup final games, five UEFA Super Cup final games, four Copa del Rey finals, two Copa de la Liga final games,
+twenty-one Supercopa de España final games, five matches including the opening game of the 1982 FIFA World Cup, two out of four matches
+at the 1964 European Nations' Cup and the football competition final at the 1992 Summer Olympics.</p>
 
       <a href="https://www.fcbarcelona.com/" class="card-link btn-lg-active"><h4>Site link</h4></a>
       <a href="https://www.fcbarcelona.com/en/club-schedule" class="card-link btn-lg-active"><h4>Cronogram</h4></a>
@@ -52,7 +54,7 @@
 </div>
 </div>
 </div>
-
+ <footer><%= render 'shared/footer' %></footer>
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -89,4 +91,4 @@
       </div>
     </div>
   </div>
-  <footer><%= render 'shared/footer' %></footer>
+
