--- a/app/views/pages/joke.html.erb
+++ b/app/views/pages/joke.html.erb
@@ -6,7 +6,7 @@
       </div>
 
       <div class="row justify-content-center">
-        <h2 class="text-center subtitle" > Naah, we're just kidding!</h2>
+        <h2 class="text-center subtitle" > Naah, we're still kidding! </h2>
         <h2 class="text-center description">
           Just click on start and don't piss us off!
         </h2>
