--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
           <%= link_to "Host", "#", class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Manage booking", "../users/bookings", class: "nav-link" %>
+          <%= link_to "Manage booking", "../users/mybookings", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://res.cloudinary.com/wagon/image/upload/c_fill,g_face,h_200,w_200/eoy8hcefagoyl8vmg4os.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
