--- a/app/views/users/mybookings.html.erb
+++ b/app/views/users/mybookings.html.erb
@@ -1,21 +1,9 @@
 <div class="bookings">
-  <h1>Upcoming reservations:</h1>
-  <div class="row">
-    <div class="card col-5">
-     <div class="row">
-      <div class="col-6">
-        <img class="card-img-top" src="https://www.fcbarcelonanoticias.com/uploads/s1/11/69/48/3/camp-nou-nuevo-constructoras.jpeg" alt="Card image cap">
-      </div>
-      <div class="col-6">
-        <div class="card-body">
-          <h4 class="card-title">Camp Nou</h4>
-          <p class="card-text">Starting date: 01/02/2020 </p>
-          <p class="card-text">Duration: 3 days</p>
-          <a href="#" class="btn btn-danger">Cancel</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  <h1>You have no upcoming reservations:</h1>
+    <div class="row give-me-space">
+</div>
+    <%= link_to "Book an infrastructure", infrastructures_path, class:"btn btn-primary"%>
+  <div class="row give-me-space">
 </div>
 <h1>Previous reservations:</h1>
 <div class="row">
